projetGL/src/test/deca/context/valid/provided/valid_bool_10.deca
{
  int x = 10;
  float y = 5.5;
  boolean b = true;

  // Combinaisons imbriquées et conversions implicites
  (x > 5) && (y < 10.0) || b; // true
  (x < 5) || ((y > 5.0) && !b); // false
  (x == 10) && ((y != 5.5) || b); // true
  !((x < 10) || (y > 6.0)); // false
}
