projetGL/src/test/deca/context/invalid/provided/05_invalid_cast_boolean_to_int_or_float.deca
{
    boolean b;
    int x;
    float y;

    b = false;

    // Erreurs : cast boolean -> int ou boolean -> float
    x = (int)(b);    // Interdit
    y = (float)(b);  // Interdit

    println("Ne devrait pas arriver");
}
